{
  "@@locale": "en",
  "appTitle": "Sport App",
  "@appTitle": {
    "description": "Main app title"
  },
  "welcome": "Welcome!!",
  "invalid_credendials": "Invalid credentials",
  "login": "login",
  "signup": "Sign up",
  "password_input": "Password",
  "email_input": "Email",
  "no_internet": "There is not internet, please turn it on",
  "server_error": "Server error, try again later",
  "api_waiting_loader": "Please wait",
  "api_loader_title": "Message",
  "empty_input_field": "Field can not be empty",
  "short_input_field": "Field is too short",
  "invalid_email_field": "Invalid email",
  "button_logout": "Logout",
  "menu_sport_plan_page": "Sport plans",
  "menu_sport_session_page": "Sport session",
  "menu_sport_calendar": "Calendar",
  "menu_sport_measures": "Statistics",
  "schedule_event_title": "Schedule event",
  "event_description": "Description",
  "event_place": "Place",
  "event_init_time": "Init time",
  "event_end_time": "End time",
  "event_date": "Date",
  "plan_name": "Plan name",
  "active_session_dialog_message": "You must stop the exercise",
  "active_session_start_button": "Start",
  "active_session_pause_button": "Pause",
  "active_session_stop_button": "Stop",
  "vo2_low_title": "Alert vo2",
  "vo2_low_message": "Vo2 is very low",
  "ftp_low_title": "Alert ftp",
  "ftp_low_message": "Ftp is low try harder",
  "session_title": "Scheduled sessions",
  "next_event_title": "Scheduled events"
}