...
                          borderRadius: BorderRadius.circular(10),
                          color: Colors.white,
                        ),
                        child: Column(
                          children: <Widget>[
                            ButtonTheme(
                              key: const Key('login_btn'),
                              height: SizeConfig.defaultSize * 10,
                              minWidth: MediaQuery.of(context).size.width,
                              child: OutlinedButton(
                                onPressed: () {
                                  Navigator.push(
                                    context,
...
                              ),
                            ),
                            SizedBox(
                              height: SizeConfig.defaultSize * 1,
                            ),
                            ButtonTheme(
                              key: const Key('signup_btn'),
                              height: SizeConfig.defaultSize * 10,
                              minWidth: MediaQuery.of(context).size.width,
                              child: OutlinedButton(
                                onPressed: _launchURL,
                                style: OutlinedButton.styleFrom(
                                  padding: const EdgeInsets.fromLTRB(40, 0, 40, 0)
...
