...
      child: Scrollbar(
          child: ListView.builder(
              itemCount: items.length,
              itemBuilder: (context, index) {
                final item = items[index];
                return ListTile(
                  key: const Key('sport_plan_item'),
                  leading: const Icon(
                      Icons.run_circle_outlined,
                    size: 60,
                  ),
                  onTap: () => {
                    Navigator.push(
...
